src/style.css
* {
  margin: 0;
  padding: 0;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

html {
  box-sizing: border-box;
  font-size: 62.5%;
}

body {
  font-family: "Barlow Semi Condensed", sans-serif;
  font-size: 1.6rem;
  color: #fff;
  background-color: #292b2d;

  overflow-x: hidden;
}

.header {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  background-image: linear-gradient(to top, #292b2d 0 1%, transparent 1% 100%),
    url("/assets/beach-bg-large.jpg");
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;

  height: 76rem;
}

.header__nav {
  display: flex;
  gap: 2rem;
  list-style-type: none;
  margin-top: 4rem;
}

.header__link {
  display: inline-block;
  position: relative;
  text-transform: uppercase;
  text-decoration: none;
  font-weight: 300;
  color: #fff;
  padding: 1rem 3rem;
  backdrop-filter: blur(3px);
  -webkit-backdrop-filter: blur(3px);
  box-shadow: 0 0 4px 4px rgba(0, 0, 0, 0.2);
  border: 2px solid rgba(255, 255, 255, 0.4);
  overflow: hidden;
  transition: all 0.2s ease-in-out;
}

.header__link:active,
.header__link:hover {
  box-shadow: 0 0 6px 6px rgba(0, 0, 0, 0.3);
}

.header__link::after {
  position: absolute;
  content: "";
  bottom: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(255, 255, 255, 0.2);
  transform: translateY(100%);
  transition: all 0.2s ease-in-out;
  z-index: -1;
}

.header__link:active::after,
.header__link:hover::after {
  transform: translateY(0%);
}

.header__link--img {
  height: 10rem;
  width: auto;
}

.header__title {
  position: absolute;
  top: 21rem;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
  width: 100%;
  text-align: center;
  letter-spacing: 18px;
  font-size: 12rem;
  font-weight: 100;
  text-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
  z-index: 2;
}

.header__box {
  position: absolute;
  top: 16rem;
  left: 50%;
  transform: translateX(-50%);
  width: 40rem;
  height: 58rem;
  padding: 2rem;

  display: grid;
  grid-template-rows: 1fr 1fr;
  align-items: flex-end;

  background-image: linear-gradient(
    to bottom right,
    rgba(0, 112, 84, 0.2),
    rgba(0, 130, 153, 0.5),
    rgba(0, 84, 179, 0.9),
    rgb(107, 55, 156)
  );
  box-shadow: 0 16px 16px 4px rgba(0, 0, 0, 0.6);

  z-index: 1;
}

.quote {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.quote__text {
  font-size: 2rem;
  text-align: center;
}

.quote__name {
  font-weight: 700;
}

.cto {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-bottom: 2rem;
}

.cto__text {
  margin-bottom: 3rem;
  text-align: center;
}

.cto__icon {
  width: 4rem;
  height: 4rem;
}

.featured {
  padding: 8rem 0 8rem 0;
}

.featured__title,
.featured__subtitle {
  text-align: center;
}

.featured__title {
  font-size: 4.2rem;
  font-weight: 300;
}

.featured__subtitle {
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: 100;
  color: #a9aaab;
}

.featured__list {
  max-width: 110rem;
  list-style-type: none;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
  gap: 2rem;
  padding: 10rem 1rem 10rem 1rem;
  margin: 0 auto;
}

.featured__item {
  position: relative;
  max-height: 48rem;
  overflow: hidden;
  box-shadow: 0 8px 16px 4px rgba(0, 0, 0, 0.4);
}

.featured__item--top {
  grid-column: span 2;
}

.article__img {
  display: block;
  width: 100%;
  transition: all 0.2s ease-in-out;
}

.article:hover > .article__img {
  transform: scale(1.1);
}

.article__body {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 60%;
  padding: 2rem;

  display: flex;
  flex-direction: column;
  align-items: center;

  background-color: rgba(0, 0, 0, 0.7);
}

.article__title {
  font-size: 3.2rem;
  font-weight: 300;
}

.article__title a {
  text-decoration: none;
  color: #fff;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

.article__title a:hover {
  color: #57bfd1;
}

.article__date {
  margin-bottom: 2rem;
}

.article__snippet {
  margin-bottom: auto;
}

.btn {
  all: unset;
  background-color: #008299;
  padding: 1.6rem 3.2rem;
  cursor: pointer;
  transition: all 0.2s ease-in-out;
}

.btn:active,
.btn:hover {
  background-color: #664b81;
}

.container {
  margin-bottom: 12rem;
  padding: 2rem;
}

.main-article {
  max-width: 110rem;
  margin: 0 auto;
}

.main-article__title {
  font-size: 4rem;
  font-weight: 300;
}

.main-article p {
  margin-bottom: 2rem;
}

.main-article__img {
  display: inline-block;
  width: 100%;
  max-height: 48rem;
  aspect-ratio: 1 / 1;
  object-fit: cover;
  margin-bottom: 2rem;
}

.footer {
  background-color: #151617;
  padding: 10rem 0 10rem 0;
  text-align: center;
}

@media (max-width: 1024px) {
  .header {
    background-image: linear-gradient(to top, #292b2d 0 1%, transparent 1% 100%),
      url("/assets/beach-bg-medium.jpg");
  }
}

@media (max-width: 900px) {
  .header__title {
    font-size: 8rem;
    letter-spacing: 12px;
  }
}

@media (max-width: 690px) {
  .featured__item--top {
    grid-column: 1;
    grid-row: 1;
  }
}

@media (max-width: 640px) {
  .header {
    height: 64rem;
    background-image: linear-gradient(to top, #292b2d 0 1%, transparent 1% 100%),
      url("/assets/beach-bg-small.jpg");
  }

  .header__nav {
    gap: 1rem;
  }

  .header__link {
    padding: 1rem 2rem;
  }

  .header__title {
    font-size: 6rem;
    letter-spacing: 12px;
  }

  .header__box {
    width: 32rem;
    height: 48rem;
  }

  .quote__text {
    font-size: 1.6rem;
  }
}

@media (max-width: 500px) {
  .header__title {
    top: 24rem;
    font-size: 4rem;
    letter-spacing: 8px;
  }
}

@media (max-width: 420px) {
  .header__link {
    padding: 0.5rem 1rem;
  }

  .featured__subtitle {
    font-size: 1.4rem;
  }
}

